--- a/Marboket.Presentation/appsettings.Development.json
+++ b/Marboket.Presentation/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=;Database=marboket;"
-  },
-  "TokenKey": "TheMostSecretTokenKey"
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning"
+  //  }
+  //},
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=;Database=marboket;"
+  //},
+  //"TokenKey": "TheMostSecretTokenKey"
 }
