feat: Add Cloudinary Service

--- a/Marboket.Application/Marboket.Application.csproj
+++ b/Marboket.Application/Marboket.Application.csproj
@@ -8,10 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Marboket.Domain\Marboket.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Photos\Interfaces\" />
   </ItemGroup>
 
 </Project>
