--- a/Marboket.Presentation/appsettings.Development.json
+++ b/Marboket.Presentation/appsettings.Development.json
@@ -9,5 +9,10 @@
   //"ConnectionStrings": {
   //  "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=;Database=marboket;"
   //},
-  //"TokenKey": "TheMostSecretTokenKey"
+  //"TokenKey": "TheMostSecretTokenKey",
+  //"Cloudinary": {
+  //  "CloudName": "CloudName",
+  //  "ApiKey": "ApiKey",
+  //  "ApiSecret": "ApiSecret"
+  //}
 }
