feat: Add Account Endpoint and Account Dto

--- a/Marboket.Application/Marboket.Application.csproj
+++ b/Marboket.Application/Marboket.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Marboket.Domain\Marboket.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\" />
+  </ItemGroup>
+
 </Project>
